# bevy_clay_tiles

./: Cargo.toml  readme.md  todo.md
assets/: tile_types.ron  tiles_config.ron
assets/material_overrides/: doodad_material_overrides.glb  material_types.ron  wall1.matdef.ron
assets/textures/: tiles_array_normal.tga
assets/tiles/: tileconfig.tileconfig.ron
examples/: basic.rs  modify.rs
src/: clay_tile.rs  clay_tile_block.rs  clay_tile_layer.rs  clay_tile_operation.rs  lib.rs  modify_tiles.rs  pre_mesh.rs  tile_edit.rs  tile_gizmos.rs  tile_material.rs  tile_types_config.rs  tiles.rs  tiles_config.rs  tiles_texturing.rs  tool_preview.rs
src/shaders/: tile.wgsl
