[package]
name = "bevy_clay_tiles"
description = "A procedural-mesh building system for bevy"
 
 
version = "0.14.9"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/bevy_clay_tiles"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "region" , "bevy" ]


[dependencies]
anyhow = "1.0.75"
bevy = "0.14.0"
bevy_mod_sysfail = "7.0.0"
futures-lite = "1.13.0"
image = "0.25.1" 
png = "0.17.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
 
bevy_mod_raycast = "0.18.0"
thiserror = "1.0.48"
 
 bevy_material_tool = "0.14.1"
  
serde_json = "1.0.113"
 
rand = "0.8.5"
 
  
lyon = "1.0.1"
 
geo = "0.28.0" 
transform-gizmo-bevy = "0.3.0"
 
[[example]]
name = "basic"
path = "examples/basic.rs"

