[package]
name = "bevy_clay_tiles"
description = "A procedural-mesh building system for bevy"
 
 
version = "0.15.0"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/bevy_clay_tiles"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "region" , "bevy" ]


[dependencies]
anyhow = "1.0.75"
bevy = "0.15.0"
 # bevy_mod_sysfail = "7.0.0"
futures-lite = "1.13.0"
image = "0.25.2" 
png = "0.17.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
 
# bevy_mod_raycast = "0.18.0"  # vendored into bevy now 
# https://github.com/bevyengine/bevy/blob/main/examples/3d/mesh_ray_cast.rs

thiserror = "1.0.48"

  
serde_json = "1.0.113"
 
rand = "0.8.5"
 
  
lyon = "1.0.1"
 
geo = "0.28.0" 




[dev-dependencies] 
 # transform-gizmo-bevy = "0.3.0"
 bevy_material_wizard = "0.15.0"
 


 
[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "modify"
path = "examples/modify.rs"

